# fastapi-chat-clean

./: .env.example  .gitignore  Dockerfile  README.md  bm25_model.json  commands.txt  docker-compose.yml  pyproject.toml  ragas_results.csv  requirements.txt  test.html  uv add commands.txt
app/: config.py  main.py  models.py  vector_factory.py
app/middleware/: tracing.py
app/routes/: chat.py  health.py
app/services/: chunking_factory.py  llm_service.py  parent_child_service.py  rag_service.py  redis_service.py
app/templates/: chat.html
app/vectordb/: basevectorstore.py  init_bm25.py  milvus.py  pinecone.py  qdrant.py  reranker.py  weaviate.py
scripts/: evaluate_ragas.py
tests/: test_endpoints.py
